--- a/app/src/main/res/layout/keyboard.xml
+++ b/app/src/main/res/layout/keyboard.xml
@@ -8,13 +8,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"
+            android:layout_marginLeft="5dp"
             android:enabled="false"
             android:text="A"/>
 
@@ -24,6 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:layout_marginRight="5dp"
             android:contentDescription="B"
             android:text="B"/>
 
@@ -34,13 +39,16 @@
             android:layout_weight="1"
             android:onClick="onClickBtn"
             android:contentDescription="C"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"              
             android:text="C"/>
 
         <Button
             android:id="@+id/D"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="D"
             android:onClick="onClickBtn"
             android:text="D"/>
@@ -49,7 +57,8 @@
             android:id="@+id/E"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:enabled="false"
             android:text="E"/>
 
@@ -57,7 +66,8 @@
             android:id="@+id/F"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="F"
             android:onClick="onClickBtn"
             android:text="F"/>
@@ -66,7 +76,8 @@
             android:id="@+id/G"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="G"
             android:onClick="onClickBtn"
             android:text="G"/>
@@ -75,7 +86,8 @@
             android:id="@+id/H"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="H"
             android:onClick="onClickBtn"
             android:text="H"/>
@@ -84,7 +96,8 @@
             android:id="@+id/I"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:enabled="false"
             android:text="I"/>
     </LinearLayout>
@@ -92,14 +105,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/J"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="J"
+            android:layout_marginLeft="5dp"
             android:onClick="onClickBtn"
             android:text="J"/>
 
@@ -107,7 +123,8 @@
             android:id="@+id/K"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="K"
             android:onClick="onClickBtn"
             android:text="K"/>
@@ -116,7 +133,8 @@
             android:id="@+id/L"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="L"
             android:onClick="onClickBtn"
             android:text="L"/>
@@ -125,7 +143,8 @@
             android:id="@+id/M"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="M"
             android:onClick="onClickBtn"
             android:text="M"/>
@@ -134,7 +153,8 @@
             android:id="@+id/N"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="N"
             android:onClick="onClickBtn"
             android:text="N"/>
@@ -143,7 +163,8 @@
             android:id="@+id/O"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:enabled="false"
             android:text="O"/>
 
@@ -151,7 +172,8 @@
             android:id="@+id/P"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="P"
             android:text="P"/>
@@ -160,7 +182,8 @@
             android:id="@+id/Q"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:contentDescription="Q"
             android:onClick="onClickBtn"
             android:text="Q"/>
@@ -171,14 +194,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/R"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
+            android:layout_marginLeft="5dp"
             android:contentDescription="R"
             android:text="R"/>
 
@@ -186,7 +212,8 @@
             android:id="@+id/S"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="S"
             android:text="S"/>
@@ -195,7 +222,8 @@
             android:id="@+id/T"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="T"
             android:text="T"/>
@@ -204,7 +232,8 @@
             android:id="@+id/U"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:enabled="false"
             android:text="U"/>
 
@@ -212,7 +241,8 @@
             android:id="@+id/V"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="V"
             android:text="V"/>
@@ -221,7 +251,8 @@
             android:id="@+id/W"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="W"
             android:text="W"/>
@@ -230,7 +261,8 @@
             android:id="@+id/X"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="X"
             android:text="X"/>
@@ -239,7 +271,8 @@
             android:id="@+id/Y"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="Y"
             android:text="Y"/>
@@ -248,7 +281,8 @@
             android:id="@+id/Z"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="Z"
             android:text="Z"/>
@@ -258,23 +292,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="7dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/n0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="0"
+            android:layout_marginLeft="5dp"
             android:text="0"/>
 
         <Button
             android:id="@+id/n1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="1"
             android:text="1"/>
@@ -283,7 +321,8 @@
             android:id="@+id/n2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="2"
             android:text="2"/>
@@ -292,7 +331,8 @@
             android:id="@+id/n3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="3"
             android:text="3"/>
@@ -301,7 +341,8 @@
             android:id="@+id/n4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="4"
             android:text="4"/>
@@ -310,7 +351,8 @@
             android:id="@+id/n5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="5"
             android:text="5"/>
@@ -319,7 +361,8 @@
             android:id="@+id/n6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="6"
             android:text="6"/>
@@ -328,7 +371,8 @@
             android:id="@+id/n7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="7"
             android:text="7"/>
@@ -337,7 +381,8 @@
             android:id="@+id/n8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="8"
             android:text="8"/>
@@ -346,7 +391,8 @@
             android:id="@+id/n9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1" android:layout_marginRight="5dp"
+            android:background="@drawable/button_round"   
             android:onClick="onClickBtn"
             android:contentDescription="9"
             android:text="9"/>
