--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,20 @@
     android:layout_height="match_parent"
     tools:context="com.kayushi07.bollywood.MainActivity">
 
+
+    <Button
+        android:id="@+id/b_easy"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_margin="16dp"
+        android:background="@drawable/custom_option"
+        android:foreground="?attr/selectableItemBackground"
+        android:layout_centerInParent="true"
+        android:text="PLAY"
+        android:textColor="#fff"
+        android:textSize="40dp" />
+    <!--
     <TextView
         android:id="@+id/selectLevel"
         android:layout_width="wrap_content"
@@ -51,6 +65,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:text="@string/b_very_difficult"/>
+        -->
 
     <!-- view for AdMob Banner Ad -->
     <com.google.android.gms.ads.AdView
