--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -7,12 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity">
 
+
+
+
     <LinearLayout
         android:id="@+id/bollywood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
         <Button
@@ -21,7 +26,7 @@
             android:id="@+id/B_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@drawable/button_round_green_left"
             android:text="B"/>
 
         <Button
@@ -29,7 +34,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/O_btn"
             android:layout_weight="1"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:textStyle="bold"
             android:text="O"/>
 
@@ -39,7 +44,7 @@
             android:id="@+id/L_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="L"/>
 
         <Button
@@ -48,7 +53,7 @@
             android:id="@+id/L2_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="L"/>
 
         <Button
@@ -57,7 +62,7 @@
             android:id="@+id/Y_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="Y"/>
 
         <Button
@@ -66,7 +71,7 @@
             android:id="@+id/W_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="W"/>
 
         <Button
@@ -75,7 +80,7 @@
             android:id="@+id/O2_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="O"/>
 
         <Button
@@ -84,7 +89,7 @@
             android:id="@+id/O3_btn"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:background="#7FFF00"
+            android:background="@color/colorButtonGreen"
             android:text="0"/>
 
         <Button
@@ -92,7 +97,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/D_btn"
             android:layout_weight="1"
-            android:background="#7FFF00"
+            android:background="@drawable/button_round_right"
             android:textStyle="bold"
             android:text="D"/>
     </LinearLayout>
@@ -101,8 +106,9 @@
         android:id="@+id/word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-       android:layout_below="@+id/bollywood"
+        android:layout_above="@+id/keys"
+        android:gravity="center"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical">
 
         <TextView
@@ -111,16 +117,28 @@
             android:id="@+id/movie_name"
             android:textAlignment="center"
             android:layout_gravity="center"
-            android:textSize="28dp"
-            android:text="sample text"
+            android:textSize="38dp"
+            android:fontFamily="serif-monospace"
+            android:text="S__M_P__ _OD__ HHH__HH"
             android:textStyle="bold"/>
 
 
     </LinearLayout>
 
     <include layout="@layout/keyboard"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/keys"
+        android:layout_above="@+id/adView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"></include>
+
+    <!-- view for AdMob Banner Ad -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
