--- a/app/src/main/res/layout/keyboard.xml
+++ b/app/src/main/res/layout/keyboard.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#2993A0"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".GameActivity">
+    tools:context="com.kayushi07.bollywood.Activity.GameActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
@@ -18,6 +20,7 @@
             android:layout_weight="1" android:layout_marginRight="5dp"
             android:background="@drawable/button_round"
             android:layout_marginLeft="5dp"
+            android:textSize="20dp"
             android:enabled="false"
             android:text="A"/>
 
@@ -27,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="onClickBtn"
+            android:textSize="20dp"
             android:background="@drawable/button_round"
             android:layout_marginRight="5dp"
             android:contentDescription="B"
@@ -40,7 +44,8 @@
             android:onClick="onClickBtn"
             android:contentDescription="C"
             android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"              
+            android:textSize="20dp"
+            android:background="@drawable/button_round"
             android:text="C"/>
 
         <Button
@@ -48,9 +53,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="D"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="D"/>
 
         <Button
@@ -58,7 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
+            android:textSize="20dp"
             android:enabled="false"
             android:text="E"/>
 
@@ -67,9 +73,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="F"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="F"/>
 
         <Button
@@ -77,9 +83,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="G"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="G"/>
 
         <Button
@@ -87,17 +93,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="H"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="H"/>
 
         <Button
             android:id="@+id/I"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:enabled="false"
             android:text="I"/>
     </LinearLayout>
@@ -113,10 +120,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="J"
             android:layout_marginLeft="5dp"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="J"/>
 
         <Button
@@ -124,9 +131,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="K"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="K"/>
 
         <Button
@@ -134,9 +141,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="L"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="L"/>
 
         <Button
@@ -144,9 +151,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="M"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="M"/>
 
         <Button
@@ -154,17 +161,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="N"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="N"/>
 
         <Button
             android:id="@+id/O"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:enabled="false"
             android:text="O"/>
 
@@ -173,8 +181,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="P"
             android:text="P"/>
 
@@ -183,9 +191,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:background="@drawable/button_round"
             android:contentDescription="Q"
-            android:onClick="onClickBtn"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:text="Q"/>
 
 
@@ -202,8 +210,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:layout_marginLeft="5dp"
             android:contentDescription="R"
             android:text="R"/>
@@ -213,8 +221,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="S"
             android:text="S"/>
 
@@ -223,8 +231,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="T"
             android:text="T"/>
 
@@ -233,7 +241,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
+            android:textSize="20dp"
+            android:background="@drawable/button_round"
             android:enabled="false"
             android:text="U"/>
 
@@ -242,8 +251,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="V"
             android:text="V"/>
 
@@ -252,8 +261,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="W"
             android:text="W"/>
 
@@ -262,8 +271,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="X"
             android:text="X"/>
 
@@ -272,8 +281,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="Y"
             android:text="Y"/>
 
@@ -282,8 +291,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="Z"
             android:text="Z"/>
 
@@ -301,8 +310,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="0"
             android:layout_marginLeft="5dp"
             android:text="0"/>
@@ -312,8 +321,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="1"
             android:text="1"/>
 
@@ -322,8 +331,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="2"
             android:text="2"/>
 
@@ -332,8 +341,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="3"
             android:text="3"/>
 
@@ -342,8 +351,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="4"
             android:text="4"/>
 
@@ -352,8 +361,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="5"
             android:text="5"/>
 
@@ -362,8 +371,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="6"
             android:text="6"/>
 
@@ -372,8 +381,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="7"
             android:text="7"/>
 
@@ -382,8 +391,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="8"
             android:text="8"/>
 
@@ -392,8 +401,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" android:layout_marginRight="5dp"
-            android:background="@drawable/button_round"   
-            android:onClick="onClickBtn"
+            android:background="@drawable/button_round"
+            android:onClick="onClickBtn" android:textSize="20dp"
             android:contentDescription="9"
             android:text="9"/>
 
