--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorNoTitleDark">#3E5160</color>
+    <color name="NotitleLight">#2993A0</color>
     <color name="colorPrimary">#ffb300</color>
     <color name="colorPrimaryDark">#c68400</color>
     <color name="colorPrimaryLight">#c7efcf</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorButtonGreen">#2993A0</color>
-    <color name="colorNoTitleDark">#3E5160</color>
-    <color name="NotitleLight">#2993A0</color>
+    <color name="colorButtonGreen">#ffccac</color>
+    <color name="colorButtonRed">#FF0000</color>
 </resources>
