--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -126,16 +126,16 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:layout_width="50dp"
+            android:layout_width="64dp"
             android:id="@+id/b_hint"
-            android:background="@drawable/button_round"
+            android:background="@android:color/transparent"
             android:padding="5dp"
             android:layout_margin="5dp"
             android:paddingBottom="50dp"
-            android:src="@drawable/hint"
+            android:src="@drawable/hhh"
             android:layout_gravity="right"
             android:scaleType="fitCenter"
-            android:layout_height="50dp" />
+            android:layout_height="64dp" />
 
         <TextView
             android:layout_width="wrap_content"
