--- a/app/src/main/res/drawable/button_round.xml
+++ b/app/src/main/res/drawable/button_round.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="@color/colorPrimaryLight"/>
+    <solid android:color="@color/colorPrimary"/>
     <corners
-        android:radius="15dp"/>
+        android:radius="10dp"/>
 
 </shape>
 
