--- a/app/src/main/res/drawable/custom_option.xml
+++ b/app/src/main/res/drawable/custom_option.xml
@@ -14,7 +14,7 @@
                 android:topLeftRadius="140dp"
                 android:topRightRadius="140dp"/>
             <solid
-            android:color="@color/colorPrimaryDark"/>
+            android:color="@color/blue"/>
         </shape>
     </item>
     <item>
@@ -29,7 +29,7 @@
                 android:topLeftRadius="140dp"
                 android:topRightRadius="140dp"/>
             <solid
-                android:color="@color/colorPrimary"/>
+                android:color="@color/blue"/>
         </shape>
     </item>
 </selector>
