--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,37 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/movie"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
     tools:context="com.kayushi07.bollywood.Activity.MainActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        >
+    <Button
+        android:id="@+id/b_easy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:background="@drawable/bollynuy"
+        android:foreground="?attr/selectableItemBackground"/>
 
 
     <Button
-        android:id="@+id/b_easy"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/b_hollywood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:background="@drawable/custom_option"
-        android:foreground="?attr/selectableItemBackground"
-        android:layout_centerInParent="true"
-        android:text="PLAY"
-        android:textColor="#fff"
-        android:textSize="40dp" />
+        android:layout_margin="10dp"
+        android:layout_below="@+id/b_easy"
+        android:background="@drawable/hollybut"
+        android:foreground="?attr/selectableItemBackground"/>
 
-
+    </RelativeLayout>
 
     <!-- view for AdMob Banner Ad -->
     <com.google.android.gms.ads.AdView
