--- a/app/src/main/res/layout/closed_level.xml
+++ b/app/src/main/res/layout/closed_level.xml
@@ -7,15 +7,29 @@
     card_view:cardElevation="10dp">
 
     <LinearLayout
+        android:id="@+id/closed_ll"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/level_img_closed"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/a_vcam"></ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@android:color/darker_gray"
+        android:gravity="left"
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -23,7 +37,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_lock_lock"
+            android:src="@android:drawable/ic_lock_idle_lock"
             />
 
         <TextView
@@ -31,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@android:color/white"
             android:textSize="18dp"
             android:text="Level"
             />
@@ -39,16 +55,19 @@
     </LinearLayout>
         <TextView
             android:layout_gravity="center"
-            android:gravity="center"
+            android:gravity="left"
             android:id="@+id/levelmsg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           android:padding="10dp"
+            android:layout_height="match_parent"
+           android:paddingBottom="10dp"
+            android:paddingTop="5dp"
             android:textStyle="bold"
+            android:textColor="@android:color/white"
             android:textSize="14dp"
             android:text="Answer 10 movies to unlock"
             />
 
+    </LinearLayout>
     </LinearLayout>
 
     </androidx.cardview.widget.CardView>
