--- a/app/src/main/res/layout/open_level.xml
+++ b/app/src/main/res/layout/open_level.xml
@@ -1,100 +1,118 @@
-<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
     android:layout_margin="@dimen/activity_horizontal_margin"
     card_view:cardElevation="10dp">
 
+    <LinearLayout
+        android:id="@+id/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_round"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/level_img"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/b_web"></ImageView>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/level_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="LEVEL"
-            android:padding="7dp"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"
-            />
+            <TextView
+                android:id="@+id/level_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="LEVEL"
+                android:textColor="@android:color/white"
+                android:textSize="24dp"
+                android:fontFamily="sans-serif"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/pointsl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="right"
-                android:layout_margin="10dp"
-                android:layout_gravity="right">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-                        android:text="Total Score: "/>
-                    <TextView
-                        android:id="@+id/points_count"
-                        android:layout_width="wrap_content"
-                        android:textSize="16dp"
-                        android:layout_height="wrap_content"
-                        android:text="0"/>
-            </LinearLayout>
-
-          <!--  <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:max="100"
-                android:progress="0"
-                android:layout_below="@+id/pointsl" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/progressBar"
-                android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="0%"/> -->
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:tint="#FFFFFF"
-                android:id="@+id/start"
-                android:textStyle="bold"
-                android:textSize="16dp"
-                android:background="@color/colorAccent"
-                android:layout_gravity="center"
-                android:textColor="@android:color/white"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="@string/start"/>
+                android:gravity="right"
+                android:orientation="horizontal">
 
 
-      <!--  <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:tint="#FFFFFF"
-            android:id="@+id/fab"
-            android:layout_below="@+id/progressBar"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:src="@drawable/volume"/> -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Total Score: "
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp"/>
 
-
-
+                <TextView
+                    android:id="@+id/points_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="0  "
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:textSize="18dp" />
+            </LinearLayout>
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <!--  <ProgressBar
+              android:id="@+id/progressBar"
+              style="?android:attr/progressBarStyleHorizontal"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="50dp"
+              android:layout_marginRight="50dp"
+              android:max="100"
+              android:progress="0"
+              android:layout_below="@+id/pointsl" />
+
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_alignTop="@+id/progressBar"
+              android:gravity="center"
+              android:textColor="@color/colorPrimaryDark"
+              android:text="0%"/>
+          <Button
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:tint="#FFFFFF"
+              android:id="@+id/start"
+              android:textStyle="bold"
+              android:textSize="16dp"
+              android:background="@color/colorAccent"
+              android:layout_gravity="center"
+              android:textColor="@android:color/white"
+              android:layout_marginBottom="10dp"
+              android:text="@string/start"/>
+              -->
+
+
+        <!--  <android.support.design.widget.FloatingActionButton
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:tint="#FFFFFF"
+              android:id="@+id/fab"
+              android:layout_below="@+id/progressBar"
+              android:layout_margin="@dimen/activity_horizontal_margin"
+              android:src="@drawable/volume"/> -->
+
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
 
