--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
 <resources>
     <color name="colorNoTitleDark">#3E5160</color>
     <color name="NotitleLight">#2993A0</color>
-    <color name="colorPrimary">#ffb300</color>
-    <color name="colorPrimaryDark">#c68400</color>
-    <color name="colorPrimaryLight">#c7efcf</color>
+    <color name="colorPrimary">#ffde03</color>
+    <color name="colorPrimaryDark">#2E7D32</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorButtonGreen">#ffccac</color>
+    <color name="colorButtonGreen">#2196F3</color>
     <color name="colorButtonRed">#FF0000</color>
+    <color name="colortitle">#1B5E20</color>
+    <color name="blue">#0000ff</color>
 </resources>
